NEXT
--------

17.1.0
--------
* Fixed Questlog translations for all languages (#126).
* Added changelog
* Added thumbnail

17.0.0
--------
* Switched to 0.17
* Removed custom JSON encoding

16.9.0
--------
* Questlog mode. There is a setting to transform the todo list to a questlog (#74).
* Fixed bug. Imported subtasks are always open now (#92).
* Fixed german translation. (Thanks Kingmax007)

16.8.2
--------
* Updated russian translation. (Thanks MasterLogick)
* Updated chinese translation. (Thanks 笑脸)

16.8.1
--------
* Bugfix: export/import dialogs don't grow outside the screen anymore when working with long strings.
* Updated polish translations. (Thanks Virtual0txt)

16.8.0
--------
* It is now possible to add subtasks to tasks
  * Open the details view to add subtasks

16.7.2
--------
* Fixed a bug that the main button does not hide the UI anymore (#81)
* Fixed polish translation. (Thanks Virtual0txt)

16.7.1
--------
* Fixed that tasks are invisible after opening the main UI with the button (#79). (Thanks Omnifarious)

16.7.0
--------
* Tasks are now separated in title and details. (Thanks Tarrke)
  * Title is a one line textfield
  * Details is multiline
  * Details can be viewed in the main UI after clicking the "show details" button (down arrows)
* Tasks now display created by and modified by in the edit screen. (Thanks Tarrke)
* Added polish translation. (Thanks Virtual0txt)

16.6.0
--------
* It is now possible to delete tasks
* It is now possible to export and import tasks similar to blueprints
* The button text now switches between the following states
  * No tasks available: Todo List
  * Tasks available: Todo List: X tasks available
  * Task assigned to player: Todo List: <first line of task>
* Fixed credits for 16.4.0

16.5.1
--------
* Fixed a crash when editing a task (thanks Tarrke)

16.4.0
--------
* The button now only shows the first line of the task, not everything.
* Added russian translation (thanks TheMrEvgen)

16.2.0
--------