@@ -1,6 +1,6 @@
 {
   "name": "Todo-List",
-  "version": "17.0.5",
+  "version": "17.1.0",
   "title": "Todo List",
   "author": "Jason Miles, Tessiema, Quis, Tarrke, hoylemd",
   "contact": "jonasjurczok+factorio@gmail.com",
