@@ -40,6 +40,9 @@ add_subtask=Unteraufgabe erstellen
 edit_subtask=Unteraufgabe bearbeiten
 delete_subtask=Unteraufgabe löschen
 
+shortcut_toggle_ui=Todo list anzeigen/verstecken
+shortcut_add_task=Neue Aufgabe
+
 [controls]
 todolist-toggle-ui=Todo Liste minimieren/maximieren
 
