@@ -40,6 +40,9 @@ add_subtask=Create subtask
 edit_subtask=Edit subtask
 delete_subtask=Delete subtask
 
+shortcut_toggle_ui=Toggle Todo list
+shortcut_add_task=New task
+
 [controls]
 todolist-toggle-ui=Minimalizeer/maximalizeer todo lijst
 
