@@ -40,6 +40,9 @@ add_subtask=Utwórz podzadanie
 edit_subtask=Edytuj podzadanie
 delete_subtask=Usuń podzadanie
 
+shortcut_toggle_ui=Toggle Todo list
+shortcut_add_task=New task
+
 [controls]
 todolist-toggle-ui=Min/Max Liste zadań
 
