@@ -40,6 +40,9 @@ add_subtask=Создать подзадачу
 edit_subtask=Редактировать подзадачу
 delete_subtask=Удалить подзадачу
 
+shortcut_toggle_ui=Toggle Todo list
+shortcut_add_task=New task
+
 [controls]
 todolist-toggle-ui=Закрыть/Открыть "Задачи"
 
