@@ -36,6 +36,9 @@ created_by=创建的
 updated_by=修改的
 noone=没有人
 
+shortcut_toggle_ui=Toggle Todo list
+shortcut_add_task=New task
+
 [controls]
 todolist-toggle-ui=最小化/最大化待办事项列表
 
