@@ -3,6 +3,7 @@ NEXT
 
 17.1.0
 --------
+* Added toolbar support for UI toggle and task adding (#102).
 * Fixed Questlog translations for all languages (#126).
 * Added changelog
 * Added thumbnail
